<?xml version="1.0"?>
<package format="2">
  <name>localization_bringup</name>
  <version>1.0.0</version>
  <description>The localization_bringup package</description>

  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
